[package]
name = "script"
version = "0.5.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/themackabu/script"
description = "barebones http scripting"

[profile.release]
strip = true

[dependencies]
ron = "0.8.1"
mime = "0.3.17"
toml = "0.8.19"
pest = "2.7.11"
md-5 = "0.10.6"
redis = "0.24.0"
anyhow = "1.0.86"
askama = "0.12.1"
colored = "2.1.0"
rhai-fs = "0.1.3"
dashmap = "6.0.1"
walkdir = "2.5.0"
rhai-url = "0.0.5"
tracing = "0.1.40"
futures = "0.3.30"
actix-web = "4.9.0"
macros-rs = "1.2.5"
const-hex = "1.12.0"
smartstring = "1.0.1"
serde_json = "1.0.127"
pest_derive = "2.7.11"
global_placeholders = "0.1.0"
tracing-bunyan-formatter = "0.3.9"

[dependencies.tokio]
features = ["fs"]
version = "1.40.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.38"

[dependencies.tracing-subscriber]
features = ["env-filter"]
version = "0.3.18"

[dependencies.mongodb]
default-features = false
features = ["sync"]
version = "2.8.2"

[dependencies.pickledb]
features = [
	 "json",
	 "bincode",
	 "cbor",
	 "yaml",
]
version = "0.5.1"

[dependencies.reqwest]
features = ["blocking"]
version = "0.11.27"

[dependencies.rhai]
features = [
	 "serde_json",
	 "serde",
]
version = "1.19.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.209"
