[package]
name = "script"
version = "0.6.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/themackabu/script"
description = "barebones http scripting"

[profile.release]
strip = true

[build-dependencies]
chrono = "0.4.38"

[dependencies]
ron = "0.8.1"
pat = "1.0.1"
mime = "0.3.17"
toml = "0.8.19"
pest = "2.7.14"
md-5 = "0.10.6"
panic = "0.3.1"
redis = "0.24.0"
anyhow = "1.0.93"
askama = "0.12.1"
colored = "2.1.0"
rhai-fs = "0.1.3"
dashmap = "6.1.0"
walkdir = "2.5.0"
rhai-url = "0.0.5"
futures = "0.3.31"
actix-web = "4.9.0"
const-hex = "1.13.1"
tokio-wrap = "0.0.3"
smartstring = "1.0.1"
serde_json = "1.0.132"
pest_derive = "2.7.14"
rhai-dynamic = "0.0.1"
global_placeholders = "0.1.0"
tracing-bunyan-formatter = "0.3.9"
flate2 = "1.0.34"
tar = "0.4.43"

[dependencies.log]
version = "0.1.40"
package = "tracing"

[dependencies.clap]
version = "4.5.20"
features = ["derive"]

[dependencies.tokio]
version = "1.41.1"
features = ["fs"]

[dependencies.chrono]
version = "0.4.38"
features = ["serde"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["env-filter"]

[dependencies.mongodb]
version = "2.8.2"
features = ["sync"]
default-features = false

[dependencies.macros-rs]
version = "1.4.1"
features = ["actix-web"]
default-features = false

[dependencies.pickledb]
version = "0.5.1"
features = [
	 "json",
	 "bincode",
	 "cbor",
	 "yaml",
]

[dependencies.reqwest]
version = "0.12.9"
default-features = false
features = [
	"blocking", 
	"rustls-tls",
	"charset",
	"http2",
	"macos-system-configuration",
]

[dependencies.rhai]
version = "1.20.0"
features = [
	 "serde_json",
	 "serde",
]

[dependencies.serde]
version = "1.0.214"
features = ["derive"]
